<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24" />
    <item
        android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24" />
    <item
        android:id="@+id/adCreationFragment"
        android:title="@string/add"
        android:icon="@drawable/ic_baseline_add_box_24" />
    <item
        android:id="@+id/messagingFragment"
        android:title="@string/messages"
        android:icon="@drawable/ic_baseline_chat_24" />
    <item
        android:id="@+id/accountFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_account_circle_24" />

</menu>