<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.fragments.AdFragment">

    <ImageView
        android:id="@+id/adFragment_imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/lookingToTutor"
        android:src="@drawable/icon_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adFragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/adName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adFragment_imageView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/bg_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adFragment_title">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/adFragment_contactButton">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/description"
                    android:textColor="@color/main_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/adFragment_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ad_type"
                    android:textColor="@color/main_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/adFragment_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ad_type"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/subjectTitle"
                    android:textColor="@color/main_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/adFragment_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subjectText"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/level"
                    android:textColor="@color/main_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/adFragment_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/availabilities"
                    android:textColor="@color/main_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/adFragment_availabilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/availableHours"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/localisation"
                    android:textColor="@color/main_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/adFragment_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/localisation"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/author"
                    android:textColor="@color/main_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/adFragment_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ad_creation_time"
                    android:textColor="@color/main_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/adFragment_creationTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour_example"
                    android:textSize="20sp" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/adFragment_contactButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="30dp"
            android:text="@string/contact" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>