<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.activities.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editProfileTitle"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:text="@string/editProfileTitle" />

        <TextView
            android:id="@+id/editProfile_passwordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/prompt_password"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editProfile_currentPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editProfile_newPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editProfile_confirmNewPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1" />

        <TextView
            android:id="@+id/editProfile_bioTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/bio"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editProfile_bioInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bio"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:maxLines="4" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2">

            <TextView
                android:id="@+id/editProfile_firstNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="15dp"
                android:text="@string/firstName"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/editProfile_lastNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="15dp"
                android:text="@string/lastName"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editProfile_firstNameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginEnd="15dp"
                android:autofillHints="name, firstName, firstname"
                android:hint="@string/firstName"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:maxLines="1" />

            <EditText
                android:id="@+id/editProfile_lastNameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:autofillHints="lastname, lastName"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:maxLines="1" />

        </GridLayout>

        <TextView
            android:id="@+id/editProfile_adsTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/typeOfAd"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expirationCreditCard" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/editProfile_lookingForTutoringSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/lookingForTutoring" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/editProfile_tutoringAdSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/lookingToTutor" />

        <Button
            android:id="@+id/editProfile_saveButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:enabled="false"
            android:text="@string/saveChanges" />

    </LinearLayout>

</ScrollView>