<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.fragments.AccountFragment">

    <ImageView
        android:id="@+id/accountFragment_profileImg"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintBottom_toTopOf="@id/accountFragment_usernameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/accountFragment_usernameTextView"
        android:layout_width="411dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountFragment_profileImg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:background="@drawable/bg_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountFragment_usernameTextView">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/accountFragment_bottomLayout">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/bio"
                    android:textColor="@color/main_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/accountFragment_bioTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/firstname_lastname"
                    android:textColor="@color/main_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/accountFragment_namesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/firstname_lastname"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/email"
                    android:textColor="@color/main_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/accountFragment_emailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/dateOfBirth"
                    android:textColor="@color/main_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/accountFragment_birthdateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dateOfBirth"
                    android:textSize="24sp" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/accountFragment_bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <Button
                android:id="@+id/accountFragment_editButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/editProfileTitle" />

            <Button
                android:id="@+id/accountFragment_logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:theme="@style/Button.Outline" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>