<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="15dp">

    <TextView
        android:id="@+id/itemChatContact_dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="@string/date_example"
        android:textColor="#C0C0C0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/itemChatContact_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/profile"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemChatContact_dateTextView" />

    <TextView
        android:id="@+id/itemChatContact_usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/username"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/itemChatContact_imageView"
        app:layout_constraintTop_toBottomOf="@id/itemChatContact_dateTextView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/itemChatContact_messageCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#eef1f6"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toEndOf="@id/itemChatContact_imageView"
        app:layout_constraintTop_toBottomOf="@id/itemChatContact_usernameTextView">

        <LinearLayout
            android:id="@+id/itemChatContact_messageCardLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemChatContact_messageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:maxWidth="260dp"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:text="@string/enter_message"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/itemChatContact_hourTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour_example"
        android:textColor="#C0C0C0"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/itemChatContact_messageCard"
        app:layout_constraintStart_toEndOf="@id/itemChatContact_messageCard" />

</androidx.constraintlayout.widget.ConstraintLayout>